package base;

import javafx.fxml.FXML;
import javafx.scene.control.Button;
import javafx.scene.control.TextField;

public class ListPromptEDITController {
    @FXML
    private TextField listNameEDITBox;

    @FXML
    private Button listNameOkEDITBtn;

    @FXML
    private void editListName(ToDoList listEntry){
        //On "ok" button press, retrieve string from listNameBox
        String nameEntry;
        //Change value of entry name to retrieved string
        //Close window
    }
}
